--- a/java/src/main/resources/application.properties
+++ b/java/src/main/resources/application.properties
@@ -25,3 +25,5 @@ spring.mail.username=f713911d0e2f4f
 spring.mail.password=771beb099d9506
 spring.mail.auth=plain
 spring.mail.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
