--- a/java/build.gradle
+++ b/java/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 	implementation 'org.webjars:webjars-locator:0.50'
 	// https://mvnrepository.com/artifact/org.webjars/bootstrap
 	implementation 'org.webjars:bootstrap:5.3.2'
-
+    // https://mvnrepository.com/artifact/org.webjars/font-awesome
+    implementation 'org.webjars:font-awesome:6.5.1'
 
 	// https://mvnrepository.com/artifact/org.flywaydb/flyway-core
 	implementation 'org.flywaydb:flyway-core:10.7.2'
